Fix image services on mobile with a 100% width

--- a/app/assets/stylesheets/pages/_services.scss
+++ b/app/assets/stylesheets/pages/_services.scss
@@ -59,6 +59,7 @@
 @media (max-width: 900px) {
   .image-services {
     max-width: 560px;
+    width: 100%;
     margin-top: 30px;
   }
   .flex-right {
